--- a/index.html
+++ b/index.html
@@ -8,22 +8,46 @@
   </head>
   <body>
     <header>
-      <a href="/index.html">WebStudio</a>
       <nav>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
+      </nav>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
+      </address>
     </header>
     <main>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
+      <section>
+        <ul>
+          <li>
+            <p>Strategy</p>
+            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+          </li>
+          <li>
+            <p>Punctuality</p>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li>
+            <p>Diligence</p>
+            <p>
+              Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <p>Technologies</p>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          </li>
+        </ul>
+      </section>
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -42,6 +66,9 @@
         </ul>
       </section>
     </main>
-    <footer><a href="/index.html">WebStudio</a></footer>
+    <footer>
+      <a href="/index.html">WebStudio</a>
+      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
   </body>
 </html>
