--- a/index.html
+++ b/index.html
@@ -24,26 +24,30 @@
       </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <section>
+        <h2>Benefits</h2>
         <ul>
           <li>
-            <p>Strategy</p>
+            <h3>Strategy</h3>
             <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
           <li>
-            <p>Punctuality</p>
+            <h3>Punctuality</h3>
             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
           <li>
-            <p>Diligence</p>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <p>Technologies</p>
+            <h3>Technologies</h3>
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
@@ -51,18 +55,34 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="images/monitor.jpeg" alt="monitor" width="360" /></li>
-          <li><img src="images/messenger.jpeg" alt="messenger" width="360" /></li>
-          <li><img src="images/phone.jpeg" alt="phone" width="360" /></li>
+          <li><img src="./images/monitor.jpeg" alt="monitor" width="360" /></li>
+          <li><img src="./images/messenger.jpeg" alt="messenger" width="360" /></li>
+          <li><img src="./images/phone.jpeg" alt="phone" width="360" /></li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
-          <li><img src="images/Guerrero.jpeg" alt="Mark Guerrero" width="264" /></li>
-          <li><img src="images/Ford.jpeg" alt="Tom Ford" width="264" /></li>
-          <li><img src="images/Garcia.jpeg" alt="Camila Garcia" width="264" /></li>
-          <li><img src="images/Wilson.jpeg" alt="Daniel Wilson" width="264" /></li>
+          <li>
+            <img src="images/Guerrero.jpeg" alt="Mark Guerrero" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/Ford.jpeg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/Garcia.jpeg" alt="Camila Garcia" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/Wilson.jpeg" alt="Daniel Wilson" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
