--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a>WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -64,22 +64,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/Guerrero.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./images/Guerrero.jpeg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/Ford.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/Ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/Garcia.jpg" alt="Camila Garcia" width="264" />
+            <img src="./images/Garcia.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/Wilson.jpg" alt="Daniel Wilson" width="264" />
+            <img src="./images/Wilson.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -87,7 +87,7 @@
       </section>
     </main>
     <footer>
-      <a>WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
